--- a/src/pages/AboutUs.css
+++ b/src/pages/AboutUs.css
@@ -66,7 +66,7 @@ p {
     left: -50%;
     width: 200%;
     height: 200%;
-    background: radial-gradient(circle, rgba(255, 255, 255, 0.2), transparent);
+    background: radial-gradient(circle, rgba(120, 255, 000, 0.2),);
     transition: transform 0.5s;
     transform: scale(1);
     z-index: 0;
