--- a/src/pages/AboutUs.css
+++ b/src/pages/AboutUs.css
@@ -53,7 +53,7 @@ p {
     background: #ffffff;
     border-radius: 12px;
     padding: 25px;
-    box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 8px 20px rgba(125,200, 0, 0.1);
     transition: transform 0.3s, box-shadow 0.3s, background 0.3s;
     position: relative;
     overflow: hidden;
