--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -1,4 +1,4 @@
-/* Basic Reset */
+
 * {
     margin: 0;
     padding: 0;
@@ -24,7 +24,7 @@ nav a {
 }
 
 nav a:last-child {
-    margin-right: 0; /* No margin for the last item */
+    margin-right: 0; 
 }
 
 nav a:hover {
